--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,7 @@
   "name": "static-site-webpack",
   "scripts": {
     "start": "node scripts/server.js",
-    "build": "rimraf ../htdocs/public && webpack --config webpack.prod.js",
+    "build": "rimraf ../htdocs/ar-2020-awards && webpack --config webpack.prod.js",
     "dev-server": "webpack-dev-server --config webpack.dev.js"
   },
   "license": "MIT",
